# suid_sh

./: CMakeLists.txt  README.md  config.example  config.h.in
src/: CMakeLists.txt  basic_suidsh.c  suidsh.c
test/: maketest  test.sh  testme
